# cmakeutils

./: .appveyor.yml  .cmake-version  .flake8  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CheckHTTPS.cmake  CheckNinja.cmake  CheckTLS.cmake  MANIFEST.in  README.md  TLSversion.cmake  TemporaryDirectory.cmake  UserAgent.cmake  bad_ssl.cmake  build_cmake.cmake  build_nano.cmake  build_ninja.cmake  build_zstd.cmake  cmake_clean_build_dirs.py  cmake_compile.py  cmake_compile.sh  cmake_dependency_graph.py  cmake_setup.py  cmake_setup.sh  download_clang.cmake  echo_target_properties.cmake  expanduser.cmake  graph.py  html2pdf.cmake  install_cmake.cmake  install_ninja.cmake  nightly.cmake  ninja_setup.py  oneapi.cmake  oneapi_cmake.cmake  setup.cfg  test_module.py  (+2 more)
.archive/: FindMKL.cmake  cmake_compile.sh  cmake_setup.sh
.github/: config.yml
.github/workflows/: ci.yml  ci_linux.yml  ci_mac.yml  ci_windows.yml
UserAgent/: CMakeLists.txt
archive/: .appveyor.yml  FindMKL.cmake
archive_extract/: CMakeLists.txt  Readme.md
autotools/: CMakeLists.txt
build_cmake/: CMakeLists.txt
build_ninja/: CMakeLists.txt
cmake/: FindAutotools.cmake
cmake/Modules/: FindAutotools.cmake  FindCoarray.cmake  FindLAPACK.cmake  FindMKL.cmake  FindOctave.cmake
cmakeutils/: __init__.py  git.py  io.py  utils.py
example/: Readme.md  __init__.py  build.py  find.py  install.py
externalProject/: CMakeLists.txt  test_timestwo.f90  use_ext.c
fetchContent/: CMakeLists.txt  test_timestwo.f90
fetchgit/: CMakeLists.txt
fortran/: CMakeLists.txt
functions/: CMakeAddOptions.cmake  GithubRelease.cmake
install_cmake/: CMakeLists.txt
install_ninja/: CMakeLists.txt
language/: specialCharacters.cmake  specialCharacters.py  unix.txt  windows.txt
lapack/: CMakeLists.txt  example_gesvd.c
matlab/: CMakeLists.txt  TestDemo.m  engdemo.cpp  fengdemo.F90  matlab_cpp.cmake  matlab_fortran.cmake  matlab_include.cmake  meson.build  testtrue.m
mpi/: CMakeLists.txt  meson.build
octave/: CMakeLists.txt  meson.build  octdemo.cpp
octave_matlab/: CMakeLists.txt
opencl/: CMakeLists.txt  Readme.md  hello2.cxx
openmp/: CMakeLists.txt  openmp_hello.c
print_target_properties/: CMakeLists.txt  print_target_properties.cmake
regex/: transform.cmake
scripts/: CMakeArchiveName.cmake  CMakeVar.cmake  GithubRelease.cmake  build_cmake.cmake  build_mpich.cmake  build_nano.cmake  build_ninja.cmake  build_openmpi.cmake  build_zstd.cmake  install_cmake.cmake  install_cmake.sh  install_ninja.cmake  versions.json
scripts/build_cmake/: CMakeLists.txt
scripts/build_ninja/: CMakeLists.txt
scripts/install_cmake/: CMakeLists.txt
scripts/install_ninja/: CMakeLists.txt
scripts/mpi/: CMakeLists.txt  README.md
scripts/mpi/test/: CMakeLists.txt  mpi3.f90
src/cmakeutils/: cmake_compile.py  cmake_setup.py  graph.py  ninja_setup.py  versions.json
src/cmakeutils/tests/: test_module.py  test_script.py
ssl/: CMakeLists.txt
syntax/: CMakeLists.txt  not_short_circuit.cmake  var_env_cache.cmake
system/: CMakeLists.txt
tests/: test_module.py  test_script.py
zip/: CMakeLists.txt
