[metadata]
name = cmakeutils
version = 1.2.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Helper functions with CMake
url = https://github.com/scivision/cmake-utils
keywords =
  CMake
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
scripts =
  cmake_setup.py
install_requires =
  requests

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  cmake_setup = cmake_setup:main



