[metadata]
name = cmakeutils
version = 1.6.3
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Helper functions with CMake
url = https://github.com/scivision/cmakeutils
keywords =
  CMake
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_package_data = True
scripts =
  cmake_setup.py
  cmake_compile.py
install_requires =


[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
