[metadata]
name = cmakeutils
version = 1.8.3
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Helper functions with CMake
url = https://github.com/scivision/cmakeutils
keywords =
  CMake
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_package_data = True
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy

[options.entry_points]
console_scripts =
  cmake_setup = cmakeutils.cmake_setup:main
  cmake_compile = cmakeutils.cmake_compile:main
  ninja_setup = cmakeutils.ninja_setup:main
